--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "nunjucks": "^3.2.2"
+    "canvas": "^2.6.1",
+    "convert-svg-to-png": "^0.5.0",
+    "nunjucks": "^3.2.2",
+    "sharp": "^0.26.3",
+    "static-server": "^2.2.1",
+    "svg2img": "^0.9.0"
   },
   "devDependencies": {},
   "scripts": {
