--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "canvas": "^2.6.1",
-    "convert-svg-to-png": "^0.5.0",
     "nunjucks": "^3.2.2",
-    "sharp": "^0.26.3",
-    "static-server": "^2.2.1",
-    "svg2img": "^0.9.0"
+    "puppeteer": "^5.5.0",
+    "puppeteer-core": "^5.5.0"
   },
   "devDependencies": {},
   "scripts": {
